--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+*, ::before, ::after {
+    box-sizing: border-box;
+    padding: 0; margin: 0;
+}
+body {
+    font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 .line {
     display: block;
 }
@@ -35,4 +43,72 @@ input {
 input[type="checkbox"] {
   width: 2rem;
   height: 2rem;
+}
+
+.book-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.book-card {
+    background-color: aquamarine;
+    padding: 1rem;
+    margin: 1rem;
+    margin-top: 2rem;
+    border-radius: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    border: 5px solid yellowgreen;
+}
+.main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.add-book {
+    background-color: rgb(28, 28, 223);
+    border: transparent;
+    border-radius: 1.5rem;
+    padding: 1.5rem;
+    color: white;
+    font-size: 2rem;
+    font-weight: bold;
+}
+h1 {
+    font-size: 3rem;
+    margin: 1em;
+    color: red;
+    font-weight: bolder;
+}
+.titleStyle {
+    color: red;
+}
+.authorStyle {
+    color: maroon;
+}
+.pageStyle {
+    color: brown;
+}
+.readStyle {
+    color: rgb(165, 16, 16);
+}
+.remove {
+    background-color: yellow;
+    color: red;
+    border: 2px solid rgba(0, 0, 0, 0.866);
+    padding: 0.60rem;
+    font-size: 1rem;
+    border-radius: 2rem;
+}
+.final-add {
+    background-color: black;
+    color: white;
+    border: transparent;
+    padding: 1rem;
+    font-size: 1.8rem;
+    border-radius: 1rem;
 }
