add close button in container where add book

--- a/style.css
+++ b/style.css
@@ -133,3 +133,15 @@ h1 {
     border-radius: 1rem;
     margin: 1rem;
 }
+#close {
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    padding: 1rem;
+    border-radius: 1rem;
+    margin: 1rem;
+}
+.closeBtn {
+    position: absolute;
+    right: 10vw;
+    top: 5vh;
+}
